k8s-microservices/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: trading-platform

spec:
  replicas: 1

  selector:
    matchLabels:
      app: auth-service

  template:
    metadata:
      labels:
        app: auth-service

    spec:
      containers:
        - name: auth-service

          image: fullstackstocktradingplatform-auth-service:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 3001

          readinessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 20
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: trading-platform

spec:
  selector:
    app: auth-service

  ports:
    - port: 3001
      targetPort: 3001

  type: ClusterIP
