k8s-microservices/portfolio-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-service
  namespace: trading-platform

spec:
  replicas: 1

  selector:
    matchLabels:
      app: portfolio-service

  template:
    metadata:
      labels:
        app: portfolio-service

    spec:
      containers:
        - name: portfolio-service

          image: fullstackstocktradingplatform-portfolio-service:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 3002

          readinessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 10
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 20
            periodSeconds: 10

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: trading-platform

spec:
  selector:
    app: portfolio-service

  ports:
    - port: 3002
      targetPort: 3002

  type: ClusterIP
